# onthespot-webui

./: setup.cfg
src/onthespot/: accounts.py  cli.py  downloader.py  otsconfig.py  parse_item.py  runtimedata.py  web.py
src/onthespot/api/: spotify.py
src/onthespot/resources/web/: about.html  download_queue.html  plex_playlists.html  search.html  settings.html  style.css  utils.js
