[metadata]
name = onthespot-webui
version = 1.0
description = A simple and easy to use media downloader.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/benjaminfrombe/onthespot-webui
keywords = music, downloader, audio, onthespot
license = GPL-2.0 License

[options]
package_dir=
    =src
python_requires = >= 3.0
packages = find:
install_requires = file:requirements.txt

[options.entry_points]
console_scripts =
    onthespot-cli = onthespot.cli:main
    onthespot-web = onthespot.web:main
    onthespot-gui = onthespot.gui:main

[options.packages.find]
where=src

[options.package_data]
* = *.ui, *.png, *.desktop, *.qm, *.html, *.css, *.ico, *.js
